# sentinel

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPLIANCE.md  CONTRIBUTING.md  DECISIONS.md  DEMO.md  INTEGRATIONS.md  LAUNCH.md  LICENSE  Makefile  PRD.md  PUBLISHING.md  README.md  RESEARCH.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: benchmark.py  generic_agent.py  trading_agent.py
launch/: outreach.md  reddit.md  show-hn.md  x-thread.md
policies/: example.yaml  starter.yaml
site/: _worker.js  index.html
skill-transfer/: install-remote.sh
src/sentinel/: __init__.py  api.py  approvals.py  audit.py  cli.py  compliance.py  config.py  db.py  detector.py  frameworks.py  killswitch.py  mcp_proxy.py  mcp_server.py  models.py  otel.py  policy.py  ratelimit.py  redaction.py  sentinel.py
src/sentinel/dashboard/: index.html
tests/: test_api.py  test_approvals.py  test_audit.py  test_compliance.py  test_db.py  test_detector.py  test_frameworks.py  test_killswitch.py  test_mcp_proxy.py  test_mcp_server.py  test_otel.py  test_policy.py  test_ratelimit.py  test_sentinel.py
