[project]
name = "guardledger"
version = "0.1.0"
description = "Sentinel — compliance-grade flight recorder + kill switch for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Itamar Meirovich" }]
keywords = ["ai-agents", "ai-security", "agent-governance", "audit", "guardrails", "mcp", "compliance", "eu-ai-act"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pyyaml>=6.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
otel = ["opentelemetry-sdk>=1.20"]
dev = ["pytest>=8.0", "httpx>=0.27", "mcp>=1.0", "opentelemetry-sdk>=1.20", "build>=1.0", "ruff>=0.5"]

[project.scripts]
sentinel = "sentinel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI relies on calls (Body/Depends/Header/Query) in argument defaults.
extend-immutable-calls = ["fastapi.Body", "fastapi.Depends", "fastapi.Header", "fastapi.Query"]

[tool.ruff.lint.per-file-ignores]
# Regulation catalog: long, human-readable legal requirement strings — wrapping hurts readability.
"src/sentinel/frameworks.py" = ["E501"]
